resources/yaml/middleware-http-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middle-redirect-http
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
