resources/yaml/ingressroute-argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-argocd
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.fredcorp.com`)
    priority: 10
    services:
    - name: argocd-server
      namespace: argocd
      port: 80
  - kind: Rule
    match: Host(`argocd.fredcorp.com`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      namespace: argocd
      port: 80
      scheme: h2c
  tls:
    store:
      name: default
