resources/yaml/ingressroute-heimdall.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-heimdall
  namespace: kube-system
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`heimdall.fredcorp.com`)
    services:
    - name: heimdall
      port: 80
      namespace: heimdall
  tls:
    store:
      name: default
