resources/yaml/ingressroute-kiali.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-kiali
  namespace: kube-system
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`kiali.fredcorp.com`)
    services:
    - name: kiali
      namespace: kiali
      port: 20001
  tls:
    store:
      name: default
