resources/yaml/ingressroute-vault.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-vault
  namespace: kube-system
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`vault.fredcorp.com`)
    services:
    - name: vault-ui
      port: 8200
      namespace: vault
  tls:
    store:
      name: default
